[gd_scene load_steps=5 format=3 uid="uid://cde01fycdmxp5"]

[ext_resource type="Script" uid="uid://b3ajuqry1uyoh" path="res://UpgradeComponents/Tongue/tongue.gd" id="1_b8bgl"]
[ext_resource type="Texture2D" uid="uid://d4nsba4effe14" path="res://UpgradeComponents/Tongue/TongueMask.svg" id="2_x1y6y"]
[ext_resource type="Texture2D" uid="uid://6xtir5bqbbbr" path="res://UpgradeComponents/Tongue/Tongue.svg" id="3_o2fgc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_x1y6y"]
radius = 23.0
height = 132.0

[node name="Tongue" type="Node2D"]
script = ExtResource("1_b8bgl")

[node name="TongueMask" type="Sprite2D" parent="."]
clip_children = 1
position = Vector2(0, -900)
rotation = -1.57079
texture = ExtResource("2_x1y6y")

[node name="TongueSprite" type="Sprite2D" parent="TongueMask"]
position = Vector2(-1758, 0.00389688)
texture = ExtResource("3_o2fgc")

[node name="TongueArea" type="Area2D" parent="TongueMask/TongueSprite"]
position = Vector2(-28, 0.00730917)
collision_layer = 0
collision_mask = 35

[node name="CollisionShape2D" type="CollisionShape2D" parent="TongueMask/TongueSprite/TongueArea"]
position = Vector2(860, -0.00539597)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_x1y6y")
